[package]
name = "generic_cache"
authors = ["Nattapong Sirilappanich"]
description = "Easy to use object caching based on defined TTL"
version = "1.1.1"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/NattapongSiri/generic_cache_rs"

[dependencies]

[dev-dependencies]
tokio = { version = "^1", features = ["full"] }
tokio-test = { version = "^0.4" }
